# ERAP-SBT

./: .clang-format  .clang-format-ignore  .gitignore  .gitlab-ci.yml  .gitmodules  Angebot.md  Doxyfile.in  LICENSE  README.md  downloads.sha256sum  ir_specification.md  meson.build  notes.md  setup_and_build.sh  test2.sh
Ausarbeitung/: .gitignore  Ausarbeitung.bib  Ausarbeitung.tex  aspdoc.cls  commands.tex  mandelbrot_differences_generator.py
Ausarbeitung/images/mandelbrot_differences/: mandelbrot_differences_generator.py
Ausarbeitung/listing_styles/: riscv_lstlisting_style.tex
Ausarbeitung/tikz_src/: benchmarks_results1.txt  graph.tikzstyles  hashing_assembly_size.txt
docker/: Dockerfile  build_container.sh  cleanup_toolchain.sh  downloads.sha256sum  setup_toolchain.sh
examples/: .gitignore  helloworld.s  helloworld2.s  helloworld3.c  meson.build  signals.c
examples/freestanding-fibonacci/: fibonacci.c  meson.build  start.S
examples/freestanding-float-test/: Makefile  float_test.c
include/: argument_parser.h
include/common/: internal.h
include/generator/: syscall_ids.h
include/generator/x86_64/: assembler.h  generator.h  hashing.h
include/generator/x86_64/helper/: helper.h  rv64_syscalls.h  signal.h
include/ir/: basic_block.h  eval.h  function.h  instruction.h  ir.h  operation.h  ref.h  type.h  variable.h
include/ir/optimizer/: common.h  const_folding.h  dce.h  dedup.h  dedup_imm.h
include/lifter/: elf_file.h  lifter.h  program.h
presentation/: .gitignore  Makefile  Readme.txt
presentation/src/: commands.tex  entry.tex  examples.tex  praeambel.tex  praeambel_16_9.tex  praeambel_4_3.tex  presentation_16_9.tex  presentation_4_3.tex  settings.tex
presentation/src/tikz_src/: graph.tikzstyles
src/: argument_parser.cpp  config.h.in  main.cpp  meson.build  test_irs.cpp
src/generator/: generator.cpp  meson.build
src/generator/tests/: meson.build  sanity_test.cpp  test_irs.cpp  test_irs.h  util.h
src/generator/x86_64/: assembler.cpp  generator.cpp  hashing.cpp  linker_script.h  meson.build  reg_alloc.cpp  reg_alloc_multi.cpp
src/generator/x86_64/helper/: gen_ld_embed.py  helper.cpp  interpreter.cpp  link.ld  meson.build  rv64_syscalls.cpp  signal.cpp  syscall_ids.h  wrappers.S
src/ir/: basic_block.cpp  eval.cpp  function.cpp  instruction.cpp  ir.cpp  meson.build  operation.cpp  type.cpp  variable.cpp
src/ir/optimizer/: common.cpp  const_folding.cpp  dce.cpp  dedup.cpp  dedup_imm.cpp
src/ir/tests/: meson.build  shared.h  test_const_folding.cpp  test_eval.cpp  test_ir_helpers.cpp  test_optimization.cpp
src/lifter/: backtracking.cpp  elf_file.cpp  ijumps.cpp  instruction_parser.cpp  jump_table.cpp  lift_utils.cpp  lifter.cpp  meson.build  program.cpp  split_basic_block.cpp
src/lifter/instructions/: amo.cpp  arithmetic_logical.cpp  cfc.cpp  floats.cpp  load_store.cpp  mul_div.cpp  shifts.cpp  ziscr.cpp
src/lifter/tests/: meson.build  test1.cpp  test_float.cpp  test_lift_arithmetical_logical.cpp  test_lifter.cpp  test_split_basic_block.cpp
src/tests/: argument_parser.cpp  meson.build  test1.cpp
subprojects/: fadec.wrap  frvdec.wrap
tests/fclass/: correct_results.txt  fclass_test.c  test.sh
tests/mandelbrot/: mandelbrot.c  test.sh
tests/simple_zip/: main.c  meson.build  meson_options.txt  miniz.h  test.sh  zip.c  zip.h
time-x/: README.md  runcpu.cross  runcpu.cross-ria-jit
time-x/base-container/: Dockerfile
time-x/config/: Example-gcc-linux-x86.cfg  native.cfg  qemu-user.cfg  ria-jit-nofloats.cfg  ria-jit.cfg  sbt-optimize-all-notransbbs.cfg  sbt-optimize-all-with-hash-table.cfg  sbt-optimize-all.cfg  sbt-optimize-reg_alloc-no_hash_lookup-plus-gen.cfg  sbt-optimize-reg_alloc-no_hash_lookup-plus-ir.cfg  sbt-optimize-reg_alloc-no_hash_lookup-plus-lifter.cfg  sbt-optimize-reg_alloc-no_hash_lookup.cfg
time-x/result/: CPU2017.001.intspeed.cfg  CPU2017.001.intspeed.csv  CPU2017.001.intspeed.flags.html  CPU2017.001.intspeed.html  CPU2017.001.intspeed.rsf  CPU2017.001.intspeed.txt  CPU2017.016.intspeed.refspeed.cfg  CPU2017.016.intspeed.refspeed.csv  CPU2017.016.intspeed.refspeed.flags.html  CPU2017.016.intspeed.refspeed.html  CPU2017.016.intspeed.refspeed.rsf  CPU2017.016.intspeed.refspeed.txt  CPU2017.019.intspeed.refspeed.cfg  CPU2017.019.intspeed.refspeed.csv  CPU2017.019.intspeed.refspeed.flags.html  CPU2017.019.intspeed.refspeed.html  CPU2017.019.intspeed.refspeed.rsf  CPU2017.019.intspeed.refspeed.txt  CPU2017.033.intspeed.refspeed.cfg  CPU2017.033.intspeed.refspeed.csv  CPU2017.033.intspeed.refspeed.flags.html  CPU2017.033.intspeed.refspeed.html  CPU2017.033.intspeed.refspeed.rsf  CPU2017.033.intspeed.refspeed.txt  CPU2017.041.intspeed.refspeed.cfg  CPU2017.041.intspeed.refspeed.csv  CPU2017.041.intspeed.refspeed.flags.html  CPU2017.041.intspeed.refspeed.html  CPU2017.041.intspeed.refspeed.rsf  CPU2017.041.intspeed.refspeed.txt  CPU2017.043.intspeed.refspeed.cfg  CPU2017.043.intspeed.refspeed.csv  CPU2017.043.intspeed.refspeed.flags.html  CPU2017.043.intspeed.refspeed.html  CPU2017.043.intspeed.refspeed.rsf  CPU2017.043.intspeed.refspeed.txt  CPU2017.044.intspeed.refspeed.cfg  CPU2017.044.intspeed.refspeed.csv  CPU2017.044.intspeed.refspeed.flags.html  CPU2017.044.intspeed.refspeed.html  (+26 more)
